[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/WorldUI.gd" id="1"]

[node name="WorldUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 340.0
offset_bottom = 260.0
size_flags_horizontal = 0

[node name="Margin" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
custom_constants/margin_left = 8
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
custom_constants/separation = 6

[node name="RowRadius" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="L1" type="Label" parent="Panel/Margin/VBox/RowRadius"]
text = "Map Radius"
[node name="Radius" type="SpinBox" parent="Panel/Margin/VBox/RowRadius"]
min_value = 1.0
max_value = 200.0
step = 1.0
value = 25.0

[node name="RowSeed" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="L2" type="Label" parent="Panel/Margin/VBox/RowSeed"]
text = "Seed"
[node name="Seed" type="LineEdit" parent="Panel/Margin/VBox/RowSeed"]
text = "12345"

[node name="RowWater" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="L3" type="Label" parent="Panel/Margin/VBox/RowWater"]
text = "Water Threshold"
[node name="Water" type="SpinBox" parent="Panel/Margin/VBox/RowWater"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.35

[node name="RowHill" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="L4" type="Label" parent="Panel/Margin/VBox/RowHill"]
text = "Hill Threshold"
[node name="Hill" type="SpinBox" parent="Panel/Margin/VBox/RowHill"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.75

[node name="RowHigh" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="L5" type="Label" parent="Panel/Margin/VBox/RowHigh"]
text = "High Hill Threshold"
[node name="High" type="SpinBox" parent="Panel/Margin/VBox/RowHigh"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.85

[node name="RowEScale" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="L6" type="Label" parent="Panel/Margin/VBox/RowEScale"]
text = "Elevation Scale"
[node name="EScale" type="SpinBox" parent="Panel/Margin/VBox/RowEScale"]
min_value = 0.0
max_value = 3.0
step = 0.05
value = 0.6

[node name="Buttons" type="HBoxContainer" parent="Panel/Margin/VBox"]
[node name="Regen" type="Button" parent="Panel/Margin/VBox/Buttons"]
text = "Regenerate"
[node name="RandSeed" type="Button" parent="Panel/Margin/VBox/Buttons"]
text = "Randomize Seed"